[gd_scene load_steps=6 format=3 uid="uid://q5w4vldubngn"]

[ext_resource type="Theme" uid="uid://cpljgmx452bm5" path="res://ui/options_menu/options_menu.tres" id="1_au0xv"]
[ext_resource type="Script" uid="uid://byxi2va266ux8" path="res://ui/player_menu/player_select.gd" id="1_vvkid"]
[ext_resource type="Theme" uid="uid://bi36aqas10egu" path="res://ui/player_menu/redteamplayer.tres" id="3_ek8va"]
[ext_resource type="Theme" uid="uid://drs1aeord7pgx" path="res://ui/player_menu/blueteamplayer.tres" id="4_5rgwa"]
[ext_resource type="PackedScene" uid="uid://b7tii7f7rm4yl" path="res://music/combat_music.tscn" id="5_5rgwa"]

[node name="PlayerSelect" type="Node2D"]
script = ExtResource("1_vvkid")

[node name="Player Select" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Player Select"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_au0xv")

[node name="VBoxContainer" type="VBoxContainer" parent="Player Select/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ConnectLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "SELECT YOUR TEAM!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Player Select/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="JSHBox" type="HBoxContainer" parent="Player Select/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 150
alignment = 1

[node name="PlayerJoin1" type="PanelContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ek8va")

[node name="PJVBox" type="VBoxContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Spacer" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PJTitleLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox"]
layout_mode = 2
text = "Red 1"
horizontal_alignment = 1

[node name="PJSVPContainer" type="SubViewportContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_horizontal = 4

[node name="PJSVP" type="SubViewport" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox/PJSVPContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 500)
size_2d_override = Vector2i(200, 500)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0138888, -0.595936, 1.27016)
current = true

[node name="OmniLight3D" type="OmniLight3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.5, 0.5)
light_energy = 1.835
omni_range = 5.978
omni_attenuation = -0.299

[node name="PJStatusLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox"]
layout_mode = 2
text = "Press A/X to Join"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin1/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerJoin2" type="PanelContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_ek8va")

[node name="PJVBox" type="VBoxContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Spacer" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PJTitleLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox"]
layout_mode = 2
text = "Red 2"
horizontal_alignment = 1

[node name="PJSVPContainer" type="SubViewportContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_horizontal = 4

[node name="PJSVP" type="SubViewport" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox/PJSVPContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 500)
size_2d_override = Vector2i(200, 500)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0138888, -0.595936, 1.27016)
current = true

[node name="OmniLight3D2" type="OmniLight3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.5, 0.5)
light_energy = 1.835
omni_range = 5.978
omni_attenuation = -0.299

[node name="PJStatusLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox"]
layout_mode = 2
text = "Press A/X to Join"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin2/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerJoin3" type="PanelContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_5rgwa")

[node name="PJVBox" type="VBoxContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Spacer" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PJTitleLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox"]
layout_mode = 2
text = "Blue 1"
horizontal_alignment = 1

[node name="PJSVPContainer" type="SubViewportContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_horizontal = 4

[node name="PJSVP" type="SubViewport" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox/PJSVPContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 500)
size_2d_override = Vector2i(200, 500)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0138888, -0.595936, 1.27016)
current = true

[node name="OmniLight3D3" type="OmniLight3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox/PJSVPContainer/PJSVP/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0861112, 0.095936, -0.77016)
light_energy = 1.835
omni_range = 5.978
omni_attenuation = -0.299

[node name="PJStatusLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox"]
layout_mode = 2
text = "Press B/O to Join"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin3/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerJoin4" type="PanelContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_5rgwa")

[node name="PJVBox" type="VBoxContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Spacer" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PJTitleLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox"]
layout_mode = 2
text = "Blue 2"
horizontal_alignment = 1

[node name="PJSVPContainer" type="SubViewportContainer" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox"]
custom_minimum_size = Vector2(200, 500)
layout_mode = 2
size_flags_horizontal = 4

[node name="PJSVP" type="SubViewport" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox/PJSVPContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 500)
size_2d_override = Vector2i(200, 500)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0138888, -0.595936, 1.27016)
current = true

[node name="OmniLight3D4" type="OmniLight3D" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox/PJSVPContainer/PJSVP"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, -0.5, 0.5)
light_energy = 1.835
omni_range = 5.978
omni_attenuation = -0.299

[node name="PJStatusLabel" type="Label" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox"]
layout_mode = 2
text = "Press B/O to Join"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Player Select/PanelContainer/VBoxContainer/JSHBox/PlayerJoin4/PJVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CombatMusic" parent="." instance=ExtResource("5_5rgwa")]
autoplay = false
